[package]
name = "api"
version = "0.1.0"
authors = ["Simon Paitrault <contact@freyskeyd.fr>"]

[dependencies]
threadpool = "*"
scoped_threadpool = "*"
promising-future = "0.1.6"
iron = "*"
router = "*"
nlp = { git = "https://github.com/Freyskeyd/nlp.git", branch = "feat-metaphone" }
serde = "0.6.1"
serde_json = "*"
